--- a/html6.html
+++ b/html6.html
@@ -25,21 +25,23 @@
         <div class="text5">Lots of incredible layouts were designed for your creativity ilium dolor sit amen Feel free to choose your favorite one.</div>
         <div class="box1" >770
             <div class="inside">WORKING HOURS</div>
-            <img class="one" src="free-icon-font-hourglass-end (1).png" width="80px" heigth="95px">
-        </div>
+            <img class="one" src="free-icon-font-hourglass-end (1).png" width="80px" heigth="95px"></div>
         <div class="box2">90%
             <div class="inside">HAPPY CUSTOMERS</div>
-            <img class="one" src="free-icon-font-smile.png" width="80px" heigth="95px">
+            <img class="one" src="free-icon-font-smile.png" width="80px" heigth="95px"></div>
         </div>
         <div class="box3">40+
             <div class="inside">PROJECTS DONE</div>
-            <img class="one" src="free-icon-font-browser.png" width="80px" heigth="95px">
+            <img class="one" src="free-icon-font-browser.png" width="80px" heigth="95px"></div>
         </div>
         <div class="box4">12,999
             <div class="inside">CUPS COFFEE</div>
-            <img class="one" src="free-icon-font-document.png" width="80px" heigth="95px">
-            <div  class="top">PORTFOLIOS</div>
+            <img class="one" src="free-icon-font-document.png" width="80px" heigth="95px"> </div>
+            <div class="top1">PORTFOLIOS</div>
             <div class="text">Choose from our wide range of portfolio layouts to create your own amazing your good showcase.</div>
+        <div class="elem1">
         </div>
+        <img class="chair" src="stool.jpg">
+        <img class="circle" src="woman.jpg">
     </body> 
 </html>
