--- a/html6.html
+++ b/html6.html
@@ -7,10 +7,14 @@
     <title></title>
 </head>
     <body>
-        <header id="header">MINIMALISM</header>
-        <div  class="top"> WELCOME YOU TO TRI-O</div>
-        <div class="text">Tri-O is a powerful, responsive and trendy multipurpose bootstrap template. Bring your website to a new level with Tri-O.</div>
-        <img class="image" src="msg996856459-362114.jpg" width="800px" height="400px">
+        <img class="header" src="wall2.jpg">
+        <div class="header1">Bold Design</div>
+        <div class="cont"><div class="header2">Responsive & retina ready, Tri-O looks professional and elegant on all devices and screen sizes.</div></div>
+        <div class="cont"><div class="header3">DISCOVER MORE</div></div>
+        <div class="cont"><div  class="top"> WELCOME YOU TO TRI-O</div></div>
+        <div class="cont"><div class="text">Tri-O is a powerful, responsive and trendy multipurpose bootstrap template. Bring your website to a new level with Tri-O.</div></div>
+        <div class="cont"><div class="line1"></div></div>
+        <img class="image" src="msg996856459-362114.jpg">
         <div class="text1">FREE PLUGINS INCLUDED</div>
         <img class="icon1" src="free-icon-font-apps-3917618.png" width="27px" heigth="37px">
         <div class="text2">Important plugins are included and free Lorem ipsum dolor ait amet in Tri-O: Essential Grid Slider Revolution, Has Composer</div>
@@ -37,11 +41,150 @@
         <div class="box4">12,999
             <div class="inside">CUPS COFFEE</div>
             <img class="one" src="free-icon-font-document.png" width="80px" heigth="95px"> </div>
-            <div class="top1">PORTFOLIOS</div>
-            <div class="text">Choose from our wide range of portfolio layouts to create your own amazing your good showcase.</div>
-        <div class="elem1">
+        <div class="cont"><div class="top1">PORTFOLIOS</div></div>
+        <div class="cont"><div class="text">Choose from our wide range of portfolio layouts to create your own amazing your good showcase.</div></div>
+        <div class="cont"><div class="line1"></div></div>
+        <div class="cont">
+        <div class="group1">
+            <ul class="hover-effect-scale">
+                <li>
+                  <img src="shoper.jpg" width="270px" height="368px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="hover-effect-scale">
+                <li>
+                  <img src="watch.jpg" width="270px" height="218px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
         </div>
-        <img class="chair" src="stool.jpg">
+        <div class="group1">
+
+            <ul class="hover-effect-scale">
+                <li>
+                  <img src="comp.jpg" width="270px" height="218px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
+
+            <ul class="hover-effect-scale">
+                <li>
+                  <img src="photographer.jpg" width="270px" height="368px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
+
+        </div>
+        <div class="group1"
+    >
+            <ul class="hover-effect-scale">
+                <li>
+                  <img src="tablet.jpg" width="270px" height="368px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="hover-effect-scale">
+                <li>
+                  <img src="card.jpg" width="270px" height="218px">
+                  <div>
+                    <h3>Tri-O Typeface</h3>
+                    <p>Design / Photography</p>
+                    <a>View-Work</a>
+                  </div>
+                </li>
+              </ul>
+            
+        </div>
+        </div>
+        <img class="chair" src="whitewallpaper.jpg">
         <img class="circle" src="woman.jpg">
-    </body> 
+        <div class="cont"><div class="quote">"This is absolutely the best theme I have ever used. The design quality is exquisite. Their response time is unheard of."</div></div>
+        <div class="name"> JESSICA JUNG</div>
+        <div class="back">
+            <div class="cont"><div class="top2">BLOG</div></div>
+            <div class="cont"> <div class="add"><div class="text">Meet excellent blog styles with lots of new features and beautiful easy-to-use layouts.</div></div></div>
+            <div class="cont"><div class="line1"></div></div>
+            <div class="square1">
+                <div class="work">Work Passionately</div>
+                <div class="pad"><img class="one" src="clock.png" width="20px" heigth="35px"></div>
+                <div class="text7">March 9, 2022</div>
+                <div class="text8">Happiness is the universal feeling we all aspire to experience more of, yet, we can be angry, moody, depressed bunch, can't</div>
+        </div>
+        <div class="square2">
+                <div class="work">Creating electronic beats in the Malaysian Rainforest</div>
+                <div class="pad"><img class="one" src="clock.png" width="20px" heigth="35px"></div>
+                <div class="text7">March 10, 2022</div>
+                <div class="text8">I have no age. I carry me years without submitting to the regimen of time and its chronology of dates and seasons</div>
+        </div>
+        <div class="cont"><div class="top3">MEET THE TEAM</div></div>
+        <div class="cont"><div class="add"><div class="text">We’re a creative agency who pursue brilliance. We create new companies — and fix old ones.</div></div></div>
+        <div class="cont"><div class="line1"></div></div>
+        <img class="photo1" src="women1.jpg">
+        <img class="photo1" src="men1.jpg">
+        <img class="photo1" src="women2.jpg">
+        <img class="photo1" src="men2.jpg">
+        <img class="photo1" src="women3.jpg">
+    </body>
+    <footer>
+                 
+        <div class="footer">
+            <div class="cont1">
+                <div class="group1">
+                    <div class="footer1">BOOKING</div>
+                    <div class="line"></div>
+                    <div class="footer2">Max Weatherall.Productions <br> 562 Sycamore Circle <br> Atlanta, GA 30342 <br>  T: +920364426</div>
+                    <div class="footer2">Email: your@example.com <br> www.hastech.company
+
+                </div>
+            </div>
+            <div class="group1">
+                <div class="footer1">LINKS</div>
+                <div class="line"></div>
+                <div class="footer2">HOME</div>
+                <div class="footer2">SHOP</div>
+                <div class="footer2">ABOUT US</div>
+                <div class="footer2">BLOG</div>
+                <div class="footer2">CONTACT</div>
+            </div>
+            <div class="group1">
+                <div class="footer1">LATEST FROM BLOG</div>
+                <div class="line"></div>
+                <div class="footer2">Work Passionately</div>
+                <div class="group1"><div class="footer3"><img class="one" src="clock.png" width="20px" heigth="35px"></div></div>
+                <div class="group1"><div class="footer4">March 9,2022</div></div>
+                <div class="footer2">Creating electronic beads</div>
+                <div class="group1"><div class="footer3"><img class="one" src="clock.png" width="20px" heigth="35px"></div></div>
+                <div class="group1"><div class="footer4">March 10,2022</div></div>
+            </div>
+            <div class="group1">
+                <div class="footer1">GET IN TOUCH</div>
+                <div class="line"></div>
+                <div class="footer2">Enter your email and receive the <br>latest news from us.</div>
+            </div>
+            </div>
+        </div>
+    </footer>
 </html>
